# libklv

./: .gitignore  CMakeLists.txt  CONTACT  LICENSE.txt  README.md
include/: Klv.h  KlvFormatException.hpp  KlvParser.hpp
src/: Klv.cpp  KlvParser.cpp  main.cpp
test/: KlvParserTest.cpp  KlvTest.cpp
